Updated data model
