# pkg/pb/cmdb.pb.atlas.query.validate.go
@@ -33,6 +33,15 @@ var CmdbMethodsRequireFilteringValidation = map[string]map[string]options.Filter
 		"config_yaml":  options.FilteringOption{ValueType: options.QueryValidate_STRING},
 		"environments": options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
 		"life_cycles":  options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
+		"lifecycle_id": options.FilteringOption{ValueType: options.QueryValidate_STRING},
+	},
+	"/api.cmdb.ChartVersions/List": map[string]options.FilteringOption{
+		"id":             options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"name":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"description":    options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"repo":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"version":        options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"application_id": options.FilteringOption{ValueType: options.QueryValidate_STRING},
 	},
 	"/api.cmdb.AppConfigs/List": map[string]options.FilteringOption{
 		"id":             options.FilteringOption{ValueType: options.QueryValidate_STRING},
@@ -51,22 +60,24 @@ var CmdbMethodsRequireFilteringValidation = map[string]map[string]options.Filter
 		"lifecycle_id":          options.FilteringOption{ValueType: options.QueryValidate_STRING},
 	},
 	"/api.cmdb.Applications/List": map[string]options.FilteringOption{
-		"id":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"name":         options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"description":  options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"chart":        options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"repo":         options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"ticket_link":  options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"config_yaml":  options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"app_versions": options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
+		"id":                    options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"name":                  options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"description":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"chart":                 options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"repo":                  options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"ticket_link":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"config_yaml":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"app_versions":          options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
+		"application_instances": options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
 	},
 	"/api.cmdb.AppVersions/List": map[string]options.FilteringOption{
-		"id":             options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"name":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"description":    options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"repo":           options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"version":        options.FilteringOption{ValueType: options.QueryValidate_STRING},
-		"application_id": options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"id":               options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"name":             options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"description":      options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"chart_version":    options.FilteringOption{Deny: []options.QueryValidate_FilterOperator{options.QueryValidate_ALL}, ValueType: options.QueryValidate_DEFAULT},
+		"chart_version_id": options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"application_id":   options.FilteringOption{ValueType: options.QueryValidate_STRING},
+		"lifecycle_id":     options.FilteringOption{ValueType: options.QueryValidate_STRING},
 	},
 	"/api.cmdb.ApplicationInstances/List": map[string]options.FilteringOption{
 		"id":             options.FilteringOption{ValueType: options.QueryValidate_STRING},
@@ -134,6 +145,15 @@ var CmdbMethodsRequireSortingValidation = map[string][]string{
 		"name",
 		"description",
 		"config_yaml",
+		"lifecycle_id",
+	},
+	"/api.cmdb.ChartVersions/List": []string{
+		"id",
+		"name",
+		"description",
+		"repo",
+		"version",
+		"application_id",
 	},
 	"/api.cmdb.AppConfigs/List": []string{
 		"id",
@@ -163,9 +183,9 @@ var CmdbMethodsRequireSortingValidation = map[string][]string{
 		"id",
 		"name",
 		"description",
-		"repo",
-		"version",
+		"chart_version_id",
 		"application_id",
+		"lifecycle_id",
 	},
 	"/api.cmdb.ApplicationInstances/List": []string{
 		"id",
@@ -262,7 +282,9 @@ var CmdbMethodsRequireFieldSelectionValidation = map[string][]string{
 		"life_cycles.name",
 		"life_cycles.description",
 		"life_cycles.config_yaml",
+		"life_cycles.lifecycle_id",
 		"life_cycles",
+		"lifecycle_id",
 	},
 	"/api.cmdb.Lifecycles/List": {
 		"id",
@@ -279,7 +301,25 @@ var CmdbMethodsRequireFieldSelectionValidation = map[string][]string{
 		"life_cycles.name",
 		"life_cycles.description",
 		"life_cycles.config_yaml",
+		"life_cycles.lifecycle_id",
 		"life_cycles",
+		"lifecycle_id",
+	},
+	"/api.cmdb.ChartVersions/Read": {
+		"id",
+		"name",
+		"description",
+		"repo",
+		"version",
+		"application_id",
+	},
+	"/api.cmdb.ChartVersions/List": {
+		"id",
+		"name",
+		"description",
+		"repo",
+		"version",
+		"application_id",
 	},
 	"/api.cmdb.AppConfigs/Read": {
 		"id",
@@ -334,10 +374,16 @@ var CmdbMethodsRequireFieldSelectionValidation = map[string][]string{
 		"app_versions.id",
 		"app_versions.name",
 		"app_versions.description",
-		"app_versions.repo",
-		"app_versions.version",
+		"app_versions.chart_version_id",
 		"app_versions.application_id",
+		"app_versions.lifecycle_id",
 		"app_versions",
+		"application_instances.id",
+		"application_instances.name",
+		"application_instances.description",
+		"application_instances.app_version_id",
+		"application_instances.environment_id",
+		"application_instances",
 	},
 	"/api.cmdb.Applications/List": {
 		"id",
@@ -350,26 +396,46 @@ var CmdbMethodsRequireFieldSelectionValidation = map[string][]string{
 		"app_versions.id",
 		"app_versions.name",
 		"app_versions.description",
-		"app_versions.repo",
-		"app_versions.version",
+		"app_versions.chart_version_id",
 		"app_versions.application_id",
+		"app_versions.lifecycle_id",
 		"app_versions",
+		"application_instances.id",
+		"application_instances.name",
+		"application_instances.description",
+		"application_instances.app_version_id",
+		"application_instances.environment_id",
+		"application_instances",
 	},
 	"/api.cmdb.AppVersions/Read": {
 		"id",
 		"name",
 		"description",
-		"repo",
-		"version",
+		"chart_version.id",
+		"chart_version.name",
+		"chart_version.description",
+		"chart_version.repo",
+		"chart_version.version",
+		"chart_version.application_id",
+		"chart_version",
+		"chart_version_id",
 		"application_id",
+		"lifecycle_id",
 	},
 	"/api.cmdb.AppVersions/List": {
 		"id",
 		"name",
 		"description",
-		"repo",
-		"version",
+		"chart_version.id",
+		"chart_version.name",
+		"chart_version.description",
+		"chart_version.repo",
+		"chart_version.version",
+		"chart_version.application_id",
+		"chart_version",
+		"chart_version_id",
 		"application_id",
+		"lifecycle_id",
 	},
 	"/api.cmdb.ApplicationInstances/Read": {
 		"id",
