# pkg/pb/cmdb.swagger.json
@@ -1006,6 +1006,203 @@
         }
       }
     },
+    "/chart_versions": {
+      "get": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to retrieve all the ChartVersions.",
+        "operationId": "ChartVersionsList",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "\n\nA collection of response resources can be filtered by a logical expression string that includes JSON tag references to values in each resource, literal values, and logical operators. If a resource does not have the specified tag, its value is assumed to be null.\n\nLiteral values include numbers (integer and floating-point), and quoted (both single- or double-quoted) literal strings, and 'null'. The following operators are commonly used in filter expressions:\n\n|  Op   |  Description               | \n|  --   |  -----------               | \n|  ==   |  Equal                     | \n|  !=   |  Not Equal                 | \n|  \u003e    |  Greater Than              | \n|   \u003e=  |  Greater Than or Equal To  | \n|  \u003c    |  Less Than                 | \n|  \u003c=   |  Less Than or Equal To     | \n|  and  |  Logical AND               | \n|  ~    |  Matches Regex             | \n|  !~   |  Does Not Match Regex      | \n|  or   |  Logical OR                | \n|  not  |  Logical NOT               | \n|  ()   |  Groupping Operators       |\n\n\t\t\t\t\t\t",
+            "name": "_filter",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "\n\nA collection of response resources can be sorted by their JSON tags. For a 'flat' resource, the tag name is straightforward. If sorting is allowed on non-flat hierarchical resources, the service should implement a qualified naming scheme such as dot-qualification to reference data down the hierarchy. If a resource does not have the specified tag, its value is assumed to be null.)\n\nSpecify this parameter as a comma-separated list of JSON tag names. The sort direction can be specified by a suffix separated by whitespace before the tag name. The suffix 'asc' sorts the data in ascending order. The suffix 'desc' sorts the data in descending order. If no suffix is specified the data is sorted in ascending order.\n\n\t\t\t\t\t\t",
+            "name": "_order_by",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "\n\nA collection of response resources can be transformed by specifying a set of JSON tags to be returned. For a “flat” resource, the tag name is straightforward. If field selection is allowed on non-flat hierarchical resources, the service should implement a qualified naming scheme such as dot-qualification to reference data down the hierarchy. If a resource does not have the specified tag, the tag does not appear in the output resource.\n\nSpecify this parameter as a comma-separated list of JSON tag names.\n\n\t\t\t\t\t\t",
+            "name": "_fields",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "\n\nThe integer index (zero-origin) of the offset into a collection of resources. If omitted or null the value is assumed to be '0'.\n\n\t\t\t\t\t\t\t",
+            "name": "_offset",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "\n\nThe integer number of resources to be returned in the response. The service may impose maximum value. If omitted the service may impose a default value.\n\n\t\t\t\t\t\t\t",
+            "name": "_limit",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "\n\nThe service-defined string used to identify a page of resources. A null value indicates the first page.\n\n\t\t\t\t\t\t\t",
+            "name": "_page_token",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "GET operation response",
+            "schema": {
+              "$ref": "#/definitions/cmdbListChartVersionsResponse"
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to create a ChartVersion information.",
+        "operationId": "ChartVersionsCreate",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/cmdbChartVersion"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "POST operation response",
+            "schema": {
+              "$ref": "#/definitions/cmdbCreateChartVersionResponse"
+            }
+          }
+        }
+      }
+    },
+    "/chart_versions/{id}": {
+      "get": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to read a ChartVersion information by identifier.",
+        "operationId": "ChartVersionsRead",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "An application specific resource identity of a resource",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "\n\nA collection of response resources can be transformed by specifying a set of JSON tags to be returned. For a “flat” resource, the tag name is straightforward. If field selection is allowed on non-flat hierarchical resources, the service should implement a qualified naming scheme such as dot-qualification to reference data down the hierarchy. If a resource does not have the specified tag, the tag does not appear in the output resource.\n\nSpecify this parameter as a comma-separated list of JSON tag names.\n\n\t\t\t\t\t\t",
+            "name": "_fields",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "GET operation response",
+            "schema": {
+              "$ref": "#/definitions/cmdbReadChartVersionResponse"
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to update a ChartVersion information.",
+        "operationId": "ChartVersionsUpdate",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "An application specific resource identity of a resource",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/cmdbChartVersion"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "PUT operation response",
+            "schema": {
+              "$ref": "#/definitions/cmdbUpdateChartVersionResponse"
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to delete a particular ChartVersion.",
+        "operationId": "ChartVersionsDelete",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "An application specific resource identity of a resource",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "ChartVersions"
+        ],
+        "summary": "Use this method to update a ChartVersion information.",
+        "operationId": "ChartVersionsUpdate2",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "An application specific resource identity of a resource",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/cmdbChartVersion"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "PATCH operation response",
+            "schema": {
+              "$ref": "#/definitions/cmdbUpdateChartVersionResponse"
+            }
+          }
+        }
+      }
+    },
     "/cloud_providers": {
       "get": {
         "tags": [
@@ -2622,7 +2819,7 @@
     },
     "cmdbAppConfig": {
       "type": "object",
-      "title": "------------------------------------------------------------\nAppConfig represents a custom configuration for Application\n------------------------------------------------------------",
+      "title": "------------------------------------------------------------\nAppConfiug represents a custom configuration for Application\n------------------------------------------------------------",
       "properties": {
         "application_id": {
           "description": "The resource identifier.",
@@ -2659,6 +2856,14 @@
           "description": "The resource identifier.",
           "type": "string"
         },
+        "chart_version": {
+          "title": "ChartVersion referenced",
+          "$ref": "#/definitions/cmdbChartVersion"
+        },
+        "chart_version_id": {
+          "description": "The resource identifier.",
+          "type": "string"
+        },
         "description": {
           "type": "string",
           "title": "The description of the AppVersion"
@@ -2668,17 +2873,13 @@
           "type": "string",
           "readOnly": true
         },
+        "lifecycle_id": {
+          "description": "The resource identifier.",
+          "type": "string"
+        },
         "name": {
           "type": "string",
           "title": "The name of the AppVersion"
-        },
-        "repo": {
-          "type": "string",
-          "title": "Chart Repo"
-        },
-        "version": {
-          "type": "string",
-          "title": "Chart Version"
         }
       }
     },
@@ -2691,6 +2892,13 @@
           "title": "Application Versions",
           "items": {
             "$ref": "#/definitions/cmdbAppVersion"
+          }
+        },
+        "application_instances": {
+          "type": "array",
+          "title": "Application Instances",
+          "items": {
+            "$ref": "#/definitions/cmdbApplicationInstance"
           }
         },
         "chart": {
@@ -2786,6 +2994,37 @@
         }
       }
     },
+    "cmdbChartVersion": {
+      "type": "object",
+      "title": "------------------------------------------------------\nChartVersion represents a Chart Version for an Application\n------------------------------------------------------",
+      "properties": {
+        "application_id": {
+          "description": "The resource identifier.",
+          "type": "string"
+        },
+        "description": {
+          "type": "string",
+          "title": "The description of the ChartVersion"
+        },
+        "id": {
+          "description": "The resource identifier.",
+          "type": "string",
+          "readOnly": true
+        },
+        "name": {
+          "type": "string",
+          "title": "The name of the ChartVersion"
+        },
+        "repo": {
+          "type": "string",
+          "title": "The repo of the ChartVersion"
+        },
+        "version": {
+          "type": "string",
+          "title": "The version of the ChartVersion"
+        }
+      }
+    },
     "cmdbCloudProvider": {
       "type": "object",
       "title": "------------------------------------------------------------------------\nCloudProvider represents a particular Cloud Provider e.g. AWS or Azure\n------------------------------------------------------------------------",
@@ -2857,6 +3096,14 @@
       "properties": {
         "result": {
           "$ref": "#/definitions/cmdbArtifact"
+        }
+      }
+    },
+    "cmdbCreateChartVersionResponse": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "$ref": "#/definitions/cmdbChartVersion"
         }
       }
     },
@@ -3038,6 +3285,10 @@
           "type": "string",
           "readOnly": true
         },
+        "lifecycle_id": {
+          "description": "The resource identifier.",
+          "type": "string"
+        },
         "name": {
           "type": "string",
           "title": "The name of the Lifecycle"
@@ -3110,6 +3361,20 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/cmdbArtifact"
+          }
+        }
+      }
+    },
+    "cmdbListChartVersionsResponse": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "$ref": "#/definitions/apiPageInfo"
+        },
+        "results": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/cmdbChartVersion"
           }
         }
       }
@@ -3277,6 +3542,14 @@
         }
       }
     },
+    "cmdbReadChartVersionResponse": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "$ref": "#/definitions/cmdbChartVersion"
+        }
+      }
+    },
     "cmdbReadCloudProviderResponse": {
       "type": "object",
       "properties": {
@@ -3436,6 +3709,14 @@
       "properties": {
         "result": {
           "$ref": "#/definitions/cmdbArtifact"
+        }
+      }
+    },
+    "cmdbUpdateChartVersionResponse": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "$ref": "#/definitions/cmdbChartVersion"
         }
       }
     },
